# HardwareVideoCodec

./: .gitattributes  .gitignore  LICENSE  README.md  addr2line.sh  build.gradle  settings.gradle
ANativeProject/codec_native/src/main/cpp/native/: CMakeLists.txt
ANativeProject/codec_native/src/main/cpp/native/entity/: HwAndroidWindow.cpp
ANativeProject/codec_native/src/main/cpp/native/filter/: Java_BeautyV4Filter.cpp  Java_HwvcFilter.cpp
ANativeProject/codec_native/src/main/cpp/native/include/: HwAndroidWindow.h  StringUtils.h
ANativeProject/codec_native/src/main/cpp/native/media/: Java_Echoer.cpp  Java_Test_AudioPlayer.cpp
ANativeProject/codec_native/src/main/cpp/native/processor/: Java_AudioProcessor.cpp  (+3 more)
ANativeProject/hwvc/src/common/: CMakeLists.txt
ANativeProject/hwvc/src/common/decoder/: PngDecoder.cpp
ANativeProject/hwvc/src/common/entity/: HwAbsFrame.cpp  HwBuffer.cpp  HwFIFOBuffer.cpp  HwLogEnable.cpp  HwMemFIFO.cpp  HwMemFrame.cpp  HwMemFrameRef.cpp  Object.cpp
ANativeProject/hwvc/src/common/image/: HwBitmap.cpp  HwBitmapFactory.cpp
ANativeProject/hwvc/src/common/include/: AudioDevice.h  AudioPlayer.h  Base64.h  Collection.h  Echoer.h  EventPipeline.h  HandlerThread.h  HwAbsFrame.h  HwAudioPlayer.h  HwAudioRecorder.h  HwBitmap.h  HwBitmapFactory.h  HwBuffer.h  HwEchoPlayer.h  HwFIFOBuffer.h  HwLogEnable.h  HwMemFIFO.h  HwMemFrame.h  HwMemFrameRef.h  HwRecycler.h  HwRecyclerQueue.h  HwResult.h  HwSources.h  HwSourcesAllocator.h  ImageFormat.h  JpegDecoder.h  LinkedList.h  LinkedQueue.h  List.h  Logcat.h  Message.h  MessageQueue.h  Object.h  PngDecoder.h  RecyclerBlockQueue.h  SLEngine.h  SLRecorder.h  SimpleLock.h  TimeUtils.h  log.h
ANativeProject/hwvc/src/common/include/libjpeg-turbo/: jconfig.h
ANativeProject/hwvc/src/common/media/: AudioPlayer.cpp  Echoer.cpp  HwAudioPlayer.cpp  HwAudioRecorder.cpp  HwEchoPlayer.cpp
ANativeProject/hwvc/src/common/media/sles/: SLEngine.cpp  SLRecorder.cpp
ANativeProject/hwvc/src/common/sources/: HwSources.cpp  HwSourcesAllocator.cpp
ANativeProject/hwvc/src/common/thread/: EventPipeline.cpp  HandlerThread.cpp  Message.cpp  MessageQueue.cpp
ANativeProject/hwvc/src/common/utils/: Base64.cpp  Logcat.cpp  TimeUtils.cpp
ANativeProject/hwvc/src/render/: CMakeLists.txt
ANativeProject/hwvc/src/render/drawer/: NormalDrawer.cpp
ANativeProject/hwvc/src/render/egl/: Egl.cpp  HwWindow.cpp
ANativeProject/hwvc/src/render/entity/: FilterEntity.cpp  NativeWindow.cpp  NativeWindow.h
ANativeProject/hwvc/src/render/filter/: BaseMultipleSamplerFilter.cpp  BeautyV4Filter.cpp  PinkFilter.cpp
ANativeProject/hwvc/src/render/include/: AudioProcessor.h  BaseDrawer.h  Egl.h  HwAudioInput.h  HwSpeaker.h  HwTimeline.h  HwWindow.h  HwvcFilter.h  Image.h  NativeWindow.h  NormalDrawer.h  PictureProcessor.h  PinkFilter.h  Render.h  Screen.h  TextureAllocator.h  Unit.h  UnitPipeline.h  Video.h  VideoProcessor.h  YUV420PFilter.h
ANativeProject/hwvc/src/render/processor/: AudioProcessor.cpp  PictureProcessor.cpp  UnitPipeline.cpp  VideoProcessor.cpp
ANativeProject/hwvc/src/render/units/: HwAudioInput.cpp  HwSpeaker.cpp  HwStreamMedia.cpp  Image.cpp  Render.cpp  Screen.cpp  Unit.cpp  Video.cpp
codec_native/: CMakeLists.txt  build.gradle
codec_native/src/main/: AndroidManifest.xml
codec_native/src/main/cpp/codec/: CMakeLists.txt  native-lib.cpp
codec_native/src/main/cpp/codec/filter/: Filter.cpp
codec_native/src/main/cpp/codec/render/: Render.cpp
codec_native/src/main/cpp/common/: CMakeLists.txt
codec_native/src/main/cpp/common/decoder/: JpegDecoder.cpp
codec_native/src/main/cpp/common/entity/: BlockQueue.cpp  BlockQueue.h  Object.cpp  Object.h  ObjectBox.cpp  Size.cpp  Size.h
codec_native/src/main/cpp/common/include/: BlockQueue.h  EventPipeline.h  FileUtils.h  HandlerThread.h  JpegDecoder.h  Message.h  MessageQueue.h  Object.h  PngDecoder.h  Thread.h
codec_native/src/main/cpp/common/thread/: HandlerThread.cpp  HandlerThread.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  Thread.cpp  Thread.h
codec_native/src/main/cpp/common/utils/: FileUtils.cpp
codec_native/src/main/cpp/native/: CMakeLists.txt  Java_PictureProcessor.cpp
codec_native/src/main/cpp/native/filter/: Java_NormalFilter.cpp  Java_PinkFilter.cpp
codec_native/src/main/cpp/native/include/: StringUtils.h
codec_native/src/main/cpp/native/media/: Echoer.cpp
codec_native/src/main/cpp/native/processor/: Java_PictureProcessor.cpp  Java_VideoProcessor.cpp
codec_native/src/main/cpp/native/utils/: StringUtils.cpp
codec_native/src/main/cpp/render/: CMakeLists.txt  Render.cpp  Render.h  Test.cpp
codec_native/src/main/cpp/render/drawer/: BaseDrawer.cpp  NormalDrawer.cpp
codec_native/src/main/cpp/render/egl/: Egl.cpp
codec_native/src/main/cpp/render/entity/: NativeWindow.cpp
codec_native/src/main/cpp/render/filter/: BeautyV4Filter.cpp  Filter.cpp  Filter.h  NormalFilter.cpp
codec_native/src/main/cpp/render/include/: BaseDrawer.h  BaseTexture.h  BeautyV4Filter.h  Egl.h  Filter.h  FrameBuffer.h  Image.h  MainPipeline.h  NormalDrawer.h  NormalFilter.h  PictureProcessor.h  Render.h  Screen.h  TextureCenter.h  Unit.h
codec_native/src/main/cpp/render/processor/: MainPipeline.cpp  PictureProcessor.cpp
codec_native/src/main/cpp/render/texture/: BaseTexture.cpp  FrameBuffer.cpp
codec_native/src/main/cpp/render/units/: Image.cpp  Render.cpp  Screen.cpp  TextureCenter.cpp  Unit.cpp
codec_native/src/main/cpp/sdl2/: CMakeLists.txt
codec_native/src/main/cpp/test/: CMakeLists.txt  Java_PictureProcessor.cpp  Test.cpp
hwvc/src/codec/: CMakeLists.txt
hwvc/src/codec/decoder/: AbsAudioDecoder.cpp  AbsDecoder.cpp  AbsVideoDecoder.cpp  AsynVideoDecoder.cpp  Decoder.cpp  DefaultVideoDecoder.cpp
hwvc/src/codec/entity/: Frame.cpp
hwvc/src/codec/include/: AbsAudioDecoder.h  AbsDecoder.h  AbsVideoDecoder.h  AsynVideoDecoder.h  AudioPlayer.h  Decoder.h  DefaultVideoDecoder.h  FFUtils.h  Frame.h
hwvc/src/codec/include/ff/libavutil/: ffversion.h
hwvc/src/codec/media/: AudioPlayer.cpp
hwvc/src/codec/utils/: FFUtils.cpp
(+518 files in other folders)
